--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
 CONTENTFUL_SPACE_ID="71uj3saxpfbr"
 CONTENTFUL_ACCESS_TOKEN="pwutPmGqRc7FM9l1Qu7ARlfB3YnluS3O2DYr8CfrWAw"
+
+GRAPHCMS_URL=https://api-us-east-1.graphcms.com/v2/ckdjgo87w5bb401yzdfeu3bnd/master
