--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-remark-images": "^3.3.21",
     "gatsby-source-contentful": "^2.3.35",
     "gatsby-source-filesystem": "^2.3.18",
+    "gatsby-source-graphql": "^2.7.0",
     "gatsby-transformer-remark": "^2.8.23",
     "gatsby-transformer-sharp": "^2.5.11",
     "prop-types": "15.7.2",
