--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taz-store",
+  "name": "tazstore",
   "description": "Suppliers of Clothing, Art & Hair extensions",
   "version": "1.1.0",
   "author": "GT Fari <admin@goosebumps.co.zw>",
