--- a/package.json
+++ b/package.json
@@ -33,19 +33,11 @@
   ],
   "license": "MIT",
   "scripts": {
-    "analyze:lint": "eslint --ext .jsx --ext .js .",
-    "analyze:prettier": "prettier --list-different \"**/*.{css,js,jsx,json,md}\"",
-    "analyze": "npm run analyze:lint && npm run analyze:prettier",
-    "fix:lint": "eslint --ext .jsx --ext .js . --fix",
-    "fix:prettier": "prettier --write \"**/*.{css,js,jsx,json,md}\"",
-    "fix": "npm run fix:lint && npm run fix:prettier",
     "build": "gatsby build",
     "develop": "gatsby clean && gatsby develop -H 0.0.0.0 -p 8000",
-    "dev": "npm run develop",
-    "start": "npm run develop",
+    "dev": "gatsby develop -H 0.0.0.0 -p 8000",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "clean": "gatsby clean"
   },
   "devDependencies": {
     "@tailwindcss/custom-forms": "0.2.1",
