--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "gatsby-plugin-sharp": "^2.6.22",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.3.21",
-    "gatsby-source-contentful": "^2.3.35",
+    "gatsby-source-contentful": "^2.3.51",
     "gatsby-source-filesystem": "^2.3.18",
-    "gatsby-source-graphql": "^2.7.0",
+    "gatsby-source-graphql": "^2.7.6",
     "gatsby-transformer-remark": "^2.8.23",
     "gatsby-transformer-sharp": "^2.5.11",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "6.1.0"
+    "react-feather": "^2.0.8",
+    "react-helmet": "6.1.0",
+    "react-share": "^4.3.1"
   },
   "keywords": [
     "gatsby",
